[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Sprites/test_sprites.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/MeleeEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprites/weapons.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 18 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 35, 3.19668, 9, 8.80332 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SelectHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectHitbox"]
shape = SubResource( 2 )

[node name="AttackPivot" type="Node2D" parent="."]

[node name="StateSwitchTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Weapon" type="Sprite" parent="."]
position = Vector2( -35.1368, 29.9795 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
offset = Vector2( 0, -7.5 )
region_enabled = true
region_rect = Rect2( 16, 2, 8, 15 )

[node name="AttackHitbox" type="Area2D" parent="Weapon"]
position = Vector2( 0, -9.54919 )
scale = Vector2( 0.25, 0.25 )
input_pickable = false
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/AttackHitbox"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0
[connection signal="body_entered" from="Weapon/AttackHitbox" to="." method="_on_AttackHitbox_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="end_attack"]
